--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    ports:
-      - 8080:80
     depends_on:
       - database
+    ports:
+      - 8080:80
     environment:
       - DOCUMENT_ROOT=/var/www/html/public
       - SS_TRUSTED_PROXY_IPS=*
@@ -19,11 +19,11 @@ services:
       - SS_DATABASE_PASSWORD=
       - SS_DEFAULT_ADMIN_USERNAME=admin
       - SS_DEFAULT_ADMIN_PASSWORD=admin
-      - MAPBOX_TOKEN=pk.eyJ1Ijoic29tYXItZGVzaWduLXN0dWRpb3MiLCJhIjoiY2s1eWJuc2c4MXA5bzNsazBwYTZ6dnM3MiJ9.nReqnpF0FswusJzh405eWw
-
+      - SS_ERROR_LOG=silverstripe.log
   database:
     image: mysql:8.0
-    environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    restart: always
     ports:
       - 9306:3306
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
